ecmascript/parser/tests/typescript-errors/tsc/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument/input.ts.stderr
error[1023]: An index signature parameter type must be either 'string' or 'number'
  --> $DIR/tests/typescript-errors/tsc/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument/input.ts:12:14
   |
12 | var d: { [x: C]: C };
   |              ^

error[1109]: Expected an expression
  --> $DIR/tests/typescript-errors/tsc/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument/input.ts:36:9
   |
36 | var j = <C>null;
   |         ^

error[1109]: Expected an expression
  --> $DIR/tests/typescript-errors/tsc/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument/input.ts:37:9
   |
37 | var k = <M.E>null;
   |         ^

